Fix updatable score